# crewAiAgenticProjectUd

./: .gitignore  README.md
1Research_Analyst_CrewAI/: .env  agent.py  frontend_streamlit.py  main.py  pyproject.toml  requirements.txt  research_blog.md
2Crewai_Researcher/research_crew/: health_agent_result.md  pyproject.toml
2Crewai_Researcher/research_crew/src/research_crew/: main.py
2Crewai_Researcher/research_crew/src/research_crew/config/: tasks.yaml
3Trip_Planner-CrewAi/: clientCliApp.py  clientstreamlitApp.py  fastAPiTripPlannerAgent.py  main.py  pyproject.toml  requirements.txt  tripPlanTask.py  tripPlannerAgent.py
3Trip_Planner-CrewAi/.streamlit/: secrets.toml
3Trip_Planner-CrewAi/tools/: browserLessTool.py  searchTools.py
4RagAgent_CrewAI/: deepseek_crew_agent.py  llama_crew_agent.py  pyproject.toml  requirements.txt
4RagAgent_CrewAI/src/ragAgent/: crew.py  main.py
4RagAgent_CrewAI/src/ragAgent/tools/: rag_custom_tool.py
5FlowPoem_CrewAI_agent/guide_creator_flow/: pyproject.toml
5FlowPoem_CrewAI_agent/guide_creator_flow/src/guide_creator_flow/: main.py  poem.txt
6_CrewAI_Flow_Scientist_Agent/: pyproject.toml  requirements.txt
6_CrewAI_Flow_Scientist_Agent/src/researcher_content/: main.py
7_CrewAI_advanced_HR_Agent_Flow/: pyproject.toml  requirements.txt
7_CrewAI_advanced_HR_Agent_Flow/src/lead_score_flow/: main.py
7_CrewAI_advanced_HR_Agent_Flow/src/lead_score_flow/crews/lead_score_crew/: lead_score_crew.py
7_CrewAI_advanced_HR_Agent_Flow/src/lead_score_flow/utils/: candidateUtils.py
8CrewAI_Studio_Customer_support/: customer_complain.txt
