[project]
name = "researcher_content"
version = "0.1.0"
description = "researcher_content using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.38.1",
    "crewai[tools]>=0.108.0,<1.0.0",
    "fastapi>=0.109.0",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.0.5",
    "mem0ai>=0.1.81",
    "openai>=1.6.1",
    "pydantic>=2.10",
    "pyowm>=3.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.29.0",
    "tools>=0.1.9",
    "unstructured>=0.11.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
kickoff = "researcher_content.main:kickoff"
plot = "researcher_content.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
