[project]
name = "lead_score_flow"
version = "0.1.0"
description = "lead_score_flow using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]==0.85.0",
    "langchain-tools>=0.1.34",
    "crewai-tools>=0.12.0",
    "google-auth-oauthlib>=1.2.1",
    "google-api-python-client>=2.145.0",
    "pyvis>=0.3.2",
    "asyncio>=3.4.3",
    "streamlit>=1.29.0",
    "openai>=1.6.1",
    "unstructured>=0.11.0",
    "pyowm>=3.3.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.74",
    "langchain-groq>=0.3.7",
    "tools>=0.1.9",
    "requests>=2.31.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.10",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.0.5",
    "mem0ai>=0.1.81",
    "langchain-google-genai>=2.1.9",
]

[project.scripts]
kickoff = "lead_score_flow.main:kickoff"
plot = "lead_score_flow.main:plot"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
