[project]
name = "guide_creator_flow"
version = "0.1.0"
description = "guide_creator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.62.3",
    "crewai[tools]>=0.165.1,<1.0.0",
    "fastapi>=0.109.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-groq>=0.3.7",
    "langchain-openai>=0.0.5",
    "mem0ai>=0.1.115",
    "openai>=1.6.1",
    "pydantic>=2.10",
    "pyowm>=3.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.29.0",
    "tools>=0.1.9",
    "unstructured>=0.11.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
kickoff = "guide_creator_flow.main:kickoff"
run_crew = "guide_creator_flow.main:kickoff"
plot = "guide_creator_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
